--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.13.2",
+    "axios": "^1.6.7",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.5",
     "node-sass": "^7.0.3",
